--- a/invite_links.yaml
+++ b/invite_links.yaml
@@ -9,382 +9,438 @@ paths:
   /invite_links/{invite_link_id}:
     get:
       tags:
-        - invite_links
-      summary: Получить инвайт-ссылку по id
+      - invite_links
+      summary: Get Invite Link
       description: Get invite link by id
       operationId: get_invite_link_invite_links__invite_link_id__get
       security:
-        - HTTPBearer: []
+      - HTTPBearer: []
       parameters:
-        - name: invite_link_id
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: channel_id
-          in: query
-          required: true
-          schema:
-            type: integer
+      - name: invite_link_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Invite Link Id
+      - name: channel_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Channel Id
       responses:
-        "200":
-          description: Успешный ответ
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/InviteLinkResponseDTO"
-        "401":
+                $ref: '#/components/schemas/InviteLinkResponseDTO'
+        '401':
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "404":
+                $ref: '#/components/schemas/ErrorSchema'
+        '404':
           description: Invite link not found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
+                $ref: '#/components/schemas/ErrorSchema'
+        '422':
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
-  /invite_links/all:
-    post:
-      tags:
-        - invite_links
-      summary: Получить все инвайт-ссылки с фильтрами
-      description: Get all invite links with filters
-      operationId: get_invite_links_invite_links_all_post
-      security:
-        - HTTPBearer: []
-      parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 1
-        - name: limit
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 10
-            description: Количество элементов на странице. При отрицательном значении пагинация отключается
-        - name: channel_id
-          in: query
-          required: true
-          schema:
-            type: integer
-        - name: name
-          in: query
-          required: false
-          schema:
-            type: string
-            nullable: true
-        - name: creator_id
-          in: query
-          required: false
-          schema:
-            type: integer
-            nullable: true
-        - name: ordered_fields
-          in: query
-          required: false
-          schema:
-            type: array
-            items:
-              $ref: "#/components/schemas/InviteLinksOrder"
-            default: ["-created_at"]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Body_get_invite_links_invite_links_all_post"
-        required: false
-      responses:
-        "200":
-          description: Успешный ответ
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AllInviteLinksResponseDTO"
-        "401":
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
+                $ref: '#/components/schemas/HTTPValidationError'
   /invite_links:
     post:
       tags:
-        - invite_links
-      summary: Создать инвайт-ссылку
+      - invite_links
+      summary: Create Invite Link
       description: Create invite link
       operationId: create_invite_link_invite_links_post
-      security:
-        - HTTPBearer: []
       requestBody:
-        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/InviteLinkCreateDTO"
+              $ref: '#/components/schemas/InviteLinkCreateDTO'
+        required: true
       responses:
-        "201":
-          description: Успешно создано
+        '201':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/InviteLinkResponseDTO"
-        "401":
+                $ref: '#/components/schemas/InviteLinkResponseDTO'
+        '401':
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "400":
+                $ref: '#/components/schemas/ErrorSchema'
+        '400':
           description: Bad request
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "403":
+                $ref: '#/components/schemas/ErrorSchema'
+        '403':
           description: Helper bot permissions exception
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "409":
+                $ref: '#/components/schemas/ErrorSchema'
+        '409':
           description: Bot not added to channel exception
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
+                $ref: '#/components/schemas/ErrorSchema'
+        '422':
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
+                $ref: '#/components/schemas/HTTPValidationError'
+      security:
+      - HTTPBearer: []
+  /invite_links/all:
+    post:
+      tags:
+      - invite_links
+      summary: Get Invite Links
+      description: Get all invite links with filters
+      operationId: get_invite_links_invite_links_all_post
+      security:
+      - HTTPBearer: []
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 1
+          title: Page
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+          description: Количество элементов на странице. При отрицательном значении
+            пагинация отключается
+          default: 10
+          title: Limit
+        description: Количество элементов на странице. При отрицательном значении
+          пагинация отключается
+      - name: channel_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Channel Id
+      - name: name
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Name
+      - name: creator_id
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Creator Id
+      - name: ordered_fields
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/InviteLinksOrder'
+          description: Поля для сортировки. Список значений из InviteLinksOrder.
+          default:
+          - -created_at
+          title: Ordered Fields
+        description: Поля для сортировки. Список значений из InviteLinksOrder.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+              - $ref: '#/components/schemas/Body_get_invite_links_invite_links_all_post'
+              title: Body
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllInviteLinksResponseDTO'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   securitySchemes:
     HTTPBearer:
       type: http
       scheme: bearer
-
   schemas:
     InviteLinkResponseDTO:
-      type: object
-      required:
-        - id
-        - channel_id
-        - invite_link
-        - creates_join_request
-        - created_at
-        - is_bot_created
-        - budget
       properties:
         id:
           type: string
+          title: Id
         name:
-          type: string
-          nullable: true
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Name
         channel_id:
           type: integer
+          title: Channel Id
         invite_link:
           type: string
+          title: Invite Link
         creates_join_request:
           type: boolean
+          title: Creates Join Request
         expire_date:
-          type: string
-          format: date-time
-          nullable: true
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Expire Date
         member_limit:
-          type: integer
-          nullable: true
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Member Limit
         created_at:
           type: string
           format: date-time
+          title: Created At
         updated_at:
-          type: string
-          format: date-time
-          nullable: true
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Updated At
         is_bot_created:
           type: boolean
+          title: Is Bot Created
         creator_id:
-          type: integer
-          nullable: true
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Creator Id
         budget:
           type: number
+          title: Budget
         tags:
-          type: array
           items:
-            $ref: "#/components/schemas/TagInInviteLinkDTO"
-
-    TagInInviteLinkDTO:
+            $ref: '#/components/schemas/TagInInviteLinkDTO'
+          type: array
+          title: Tags
       type: object
       required:
-        - id
-        - name
-        - color
-        - type
+      - id
+      - channel_id
+      - invite_link
+      - creates_join_request
+      - created_at
+      - is_bot_created
+      - budget
+      title: InviteLinkResponseDTO
+    Body_get_invite_links_invite_links_all_post:
+      properties:
+        tags:
+          anyOf:
+          - items:
+              $ref: '#/components/schemas/TagsFiltering'
+            type: array
+          - type: 'null'
+          title: Tags
+          description: Фильтрация по тегам. В рамках одного типа тегов используется
+            логика ИЛИ при выборе тегов.В рамках разных типов тегов используется логика
+            И.Список типов тегов с тегами, которые относятся к ним.Если without_type=True,
+            то фильтруется по отсутствию тегов указанного типа.without_type=True так
+            же работает как логическое ИЛИ в рамках одного типа тегов.
+        links_ids:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Links Ids
+      type: object
+      title: Body_get_invite_links_invite_links_all_post
+    HTTPValidationError:
+      properties:
+        detail:
+          items:
+            $ref: '#/components/schemas/ValidationError'
+          type: array
+          title: Detail
+      type: object
+      title: HTTPValidationError
+    ValidationError:
+      properties:
+        loc:
+          items:
+            anyOf:
+            - type: string
+            - type: integer
+          type: array
+          title: Location
+        msg:
+          type: string
+          title: Message
+        type:
+          type: string
+          title: Error Type
+      type: object
+      required:
+      - loc
+      - msg
+      - type
+      title: ValidationError
+    TagInInviteLinkDTO:
       properties:
         id:
           type: string
           format: uuid
+          title: Id
         name:
           type: string
+          title: Name
         color:
           type: string
+          title: Color
         type:
-          $ref: "#/components/schemas/TagTypeDTO"
-
-    TagTypeDTO:
+          $ref: '#/components/schemas/TagTypeDTO'
       type: object
       required:
-        - id
-        - name
-      properties:
-        id:
-          type: string
-          format: uuid
-        name:
-          type: string
-
+      - id
+      - name
+      - color
+      - type
+      title: TagInInviteLinkDTO
     InviteLinkCreateDTO:
-      type: object
-      required:
-        - channel_id
-        - name
       properties:
         channel_id:
           type: integer
+          title: Channel Id
         name:
           type: string
+          title: Name
         creates_join_request:
           type: boolean
+          title: Creates Join Request
           default: false
         expire_date:
-          type: string
-          format: date-time
-          nullable: true
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Expire Date
         member_limit:
-          type: integer
-          nullable: true
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Member Limit
         budget:
           type: number
+          title: Budget
           default: 0
         tags:
-          type: array
           items:
             type: string
             format: uuid
-
-    AllInviteLinksResponseDTO:
+          type: array
+          title: Tags
       type: object
       required:
-        - page
-        - limit
-        - total
-        - items
-      properties:
-        page:
-          type: integer
-        limit:
-          type: integer
-        total:
-          type: integer
-        items:
-          type: array
-          items:
-            $ref: "#/components/schemas/InviteLinkResponseDTO"
-
-    Body_get_invite_links_invite_links_all_post:
-      type: object
-      properties:
-        tags:
-          type: array
-          items:
-            $ref: "#/components/schemas/TagsFiltering"
-          nullable: true
-          description: Фильтрация по тегам
-        links_ids:
-          type: array
-          items:
-            type: string
-          nullable: true
-
+      - channel_id
+      - name
+      title: InviteLinkCreateDTO
     TagsFiltering:
-      type: object
-      required:
-        - tag_type_id
-        - tags
       properties:
         tag_type_id:
           type: string
           format: uuid
+          title: Tag Type Id
         without_type:
           type: boolean
+          title: Without Type
           default: false
         tags:
-          type: array
           items:
             type: string
             format: uuid
-
-    InviteLinksOrder:
-      type: string
-      enum:
-        - name
-        - created_at
-        - -name
-        - -created_at
-
+          type: array
+          title: Tags
+      type: object
+      required:
+      - tag_type_id
+      - tags
+      title: TagsFiltering
     ErrorSchema:
-      type: object
-      required:
-        - detail
       properties:
         detail:
           type: string
-
-    HTTPValidationError:
+          title: Detail
       type: object
       required:
-        - detail
+      - detail
+      title: ErrorSchema
+    TagTypeDTO:
       properties:
-        detail:
-          type: array
-          items:
-            $ref: "#/components/schemas/ValidationError"
-
-    ValidationError:
+        id:
+          type: string
+          format: uuid
+          title: Id
+        name:
+          type: string
+          title: Name
       type: object
       required:
-        - loc
-        - msg
-        - type
+      - id
+      - name
+      title: TagTypeDTO
+    AllInviteLinksResponseDTO:
       properties:
-        loc:
-          type: array
+        page:
+          type: integer
+          title: Page
+        limit:
+          type: integer
+          title: Limit
+        total:
+          type: integer
+          title: Total
+        items:
           items:
-            anyOf:
-              - type: string
-              - type: integer
-        msg:
-          type: string
-        type:
-          type: string
+            $ref: '#/components/schemas/InviteLinkResponseDTO'
+          type: array
+          title: Items
+      type: object
+      required:
+      - page
+      - limit
+      - total
+      - items
+      title: AllInviteLinksResponseDTO
