--- a/tags.yaml
+++ b/tags.yaml
@@ -9,333 +9,407 @@ paths:
   /tags:
     get:
       tags:
-        - tags
-      summary: Получить список тегов
-      description: Получить все теги с возможностью фильтрации и пагинации
+      - Tags
+      summary: Get Tags
+      description: 'Get all tags with filters
+        !!! Пагинация отключена!!!'
       operationId: get_tags_tags_get
       security:
-        - HTTPBearer: []
+      - HTTPBearer: []
       parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 1
-        - name: limit
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 10
-        - name: channel_id
-          in: query
-          required: true
-          schema:
-            type: integer
-        - name: name
-          in: query
-          required: false
-          schema:
-            type: string
-            nullable: true
-        - name: type_id
-          in: query
-          required: false
-          schema:
-            type: string
-            format: uuid
-            nullable: true
-        - name: ordered_fields
-          in: query
-          required: false
-          schema:
-            type: array
-            items:
-              $ref: "#/components/schemas/TagsOrder"
-            default: ["-created_at"]
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 1
+          title: Page
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+          description: Количество элементов на странице. При отрицательном значении
+            пагинация отключается
+          default: 10
+          title: Limit
+        description: Количество элементов на странице. При отрицательном значении
+          пагинация отключается
+      - name: channel_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Channel Id
+      - name: name
+        in: query
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Name
+      - name: ordered_fields
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/TagsOrder'
+          description: Поля для сортировки. Список значений из TagsOrder.
+          default:
+          - -created_at
+          title: Ordered Fields
+        description: Поля для сортировки. Список значений из TagsOrder.
       responses:
-        "200":
-          description: Успешный ответ
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AllTagsResponseDTO"
-        "401":
+                $ref: '#/components/schemas/AllTagsResponseDTO'
+        '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
+        '422':
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
+                $ref: '#/components/schemas/HTTPValidationError'
     post:
       tags:
-        - tags
-      summary: Создать тег
-      description: Создать новый тег для канала
+      - Tags
+      summary: Create Tag
+      description: Create tag
       operationId: create_tag_tags_post
       security:
-        - HTTPBearer: []
+      - HTTPBearer: []
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/TagCreateDTO"
+              $ref: '#/components/schemas/TagCreateDTO'
       responses:
-        "201":
-          description: Успешно создано
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TagResponseDTO"
-        "401":
+                $ref: '#/components/schemas/TagResponseDTO'
+        '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "400":
+        '400':
           description: Bad request
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
+                $ref: '#/components/schemas/ErrorSchema'
+        '422':
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
+                $ref: '#/components/schemas/HTTPValidationError'
   /tags/types:
     get:
       tags:
-        - tags
-      summary: Получить типы тегов
-      description: Получить все типы тегов
+      - Tags
+      summary: Get Tag Types
+      description: Get all tag types
       operationId: get_tag_types_tags_types_get
-      security:
-        - HTTPBearer: []
       responses:
-        "200":
-          description: Успешный ответ
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                type: array
                 items:
-                  $ref: "#/components/schemas/TagTypeDTO"
-        "401":
+                  $ref: '#/components/schemas/TagTypeDTO'
+                type: array
+                title: Response Get Tag Types Tags Types Get
+        '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-
+      security:
+      - HTTPBearer: []
   /tags/{tag_id}:
     get:
       tags:
-        - tags
-      summary: Получить тег по ID
-      description: Получить подробную информацию о теге по его идентификатору
+      - Tags
+      summary: Get Tag
+      description: Get tag by id
       operationId: get_tag_tags__tag_id__get
       security:
-        - HTTPBearer: []
+      - HTTPBearer: []
       parameters:
-        - name: tag_id
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
+      - name: tag_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+          title: Tag Id
+      - name: channel_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Channel Id
       responses:
-        "200":
-          description: Успешный ответ
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TagResponseDTO"
-        "401":
+                $ref: '#/components/schemas/TagResponseDTO'
+        '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "404":
-          description: Tag not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorSchema"
-        "422":
+        '422':
           description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
+                $ref: '#/components/schemas/HTTPValidationError'
+    patch:
+      tags:
+      - Tags
+      summary: Update Tag
+      description: Update tag
+      operationId: update_tag_tags__tag_id__patch
+      security:
+      - HTTPBearer: []
+      parameters:
+      - name: tag_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+          title: Tag Id
+      - name: channel_id
+        in: query
+        required: true
+        schema:
+          type: integer
+          title: Channel Id
+      - name: name
+        in: query
+        required: true
+        schema:
+          type: string
+          title: Name
+      - name: color
+        in: query
+        required: true
+        schema:
+          type: string
+          title: Color
+      - name: type_id
+        in: query
+        required: true
+        schema:
+          type: string
+          format: uuid
+          title: Type Id
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TagResponseDTO'
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorSchema'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   securitySchemes:
     HTTPBearer:
       type: http
       scheme: bearer
-
   schemas:
-    TagCreateDTO:
-      type: object
-      required:
-        - channel_id
-        - name
-        - color
-        - tag_type_id
-      properties:
-        channel_id:
-          type: integer
-        name:
-          type: string
-        color:
-          type: string
-        tag_type_id:
-          type: string
-          format: uuid
-
-    TagResponseDTO:
-      type: object
-      required:
-        - id
-        - name
-        - color
-        - type
-        - created_at
-        - channel_id
-      properties:
-        id:
-          type: string
-          format: uuid
-        name:
-          type: string
-        color:
-          type: string
-        type:
-          $ref: "#/components/schemas/TagTypeDTO"
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-          nullable: true
-        channel_id:
-          type: integer
-        links:
-          type: array
-          items:
-            $ref: "#/components/schemas/InviteLinkInTagDTO"
-
     TagTypeDTO:
-      type: object
-      required:
-        - id
-        - name
       properties:
         id:
           type: string
           format: uuid
+          title: Id
         name:
           type: string
-
-    AllTagsResponseDTO:
+          title: Name
       type: object
       required:
-        - page
-        - limit
-        - total
-        - items
+      - id
+      - name
+      title: TagTypeDTO
+    ValidationError:
+      properties:
+        loc:
+          items:
+            anyOf:
+            - type: string
+            - type: integer
+          type: array
+          title: Location
+        msg:
+          type: string
+          title: Message
+        type:
+          type: string
+          title: Error Type
+      type: object
+      required:
+      - loc
+      - msg
+      - type
+      title: ValidationError
+    AllTagsResponseDTO:
       properties:
         page:
           type: integer
+          title: Page
         limit:
           type: integer
+          title: Limit
         total:
           type: integer
+          title: Total
         items:
-          type: array
           items:
-            $ref: "#/components/schemas/TagResponseDTO"
-
-    InviteLinkInTagDTO:
+            $ref: '#/components/schemas/TagResponseDTO'
+          type: array
+          title: Items
       type: object
       required:
-        - id
-        - invite_link
-        - created_at
-        - budget
-        - is_bot_created
+      - page
+      - limit
+      - total
+      - items
+      title: AllTagsResponseDTO
+    HTTPValidationError:
+      properties:
+        detail:
+          items:
+            $ref: '#/components/schemas/ValidationError'
+          type: array
+          title: Detail
+      type: object
+      title: HTTPValidationError
+    TagResponseDTO:
       properties:
         id:
           type: string
+          format: uuid
+          title: Id
         name:
           type: string
-          nullable: true
-        invite_link:
+          title: Name
+        color:
           type: string
+          title: Color
+        type:
+          $ref: '#/components/schemas/TagTypeDTO'
         created_at:
           type: string
           format: date-time
+          title: Created At
+        updated_at:
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
+          title: Updated At
+        channel_id:
+          type: integer
+          title: Channel Id
+        links:
+          items:
+            $ref: '#/components/schemas/InviteLinkInTagDTO'
+          type: array
+          title: Links
+      type: object
+      required:
+      - id
+      - name
+      - color
+      - type
+      - created_at
+      - channel_id
+      title: TagResponseDTO
+    TagCreateDTO:
+      properties:
+        channel_id:
+          type: integer
+          title: Channel Id
+        name:
+          type: string
+          title: Name
+        color:
+          type: string
+          title: Color
+        tag_type_id:
+          type: string
+          format: uuid
+          title: Tag Type Id
+      type: object
+      required:
+      - channel_id
+      - name
+      - color
+      - tag_type_id
+      title: TagCreateDTO
+    InviteLinkInTagDTO:
+      properties:
+        id:
+          type: string
+          title: Id
+        name:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Name
+        invite_link:
+          type: string
+          title: Invite Link
+        created_at:
+          type: string
+          format: date-time
+          title: Created At
         budget:
           type: number
+          title: Budget
         creator_id:
-          type: integer
-          nullable: true
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Creator Id
         is_bot_created:
           type: boolean
-
-    TagsOrder:
-      type: string
-      enum:
-        - name
-        - created_at
-        - -name
-        - -created_at
-
+          title: Is Bot Created
+      type: object
+      required:
+      - id
+      - invite_link
+      - created_at
+      - budget
+      - is_bot_created
+      title: InviteLinkInTagDTO
     ErrorSchema:
-      type: object
-      required:
-        - detail
       properties:
         detail:
           type: string
-
-    HTTPValidationError:
+          title: Detail
       type: object
       required:
-        - detail
-      properties:
-        detail:
-          type: array
-          items:
-            $ref: "#/components/schemas/ValidationError"
-
-    ValidationError:
-      type: object
-      required:
-        - loc
-        - msg
-        - type
-      properties:
-        loc:
-          type: array
-          items:
-            anyOf:
-              - type: string
-              - type: integer
-        msg:
-          type: string
-        type:
-          type: string
+      - detail
+      title: ErrorSchema
