--- a/tags.yaml
+++ b/tags.yaml
@@ -238,6 +238,14 @@ components:
       type: http
       scheme: bearer
   schemas:
+    TagsOrder:
+      title: TagsOrder
+      type: string
+      enum: 
+        - name
+        - created_at
+        - -name
+        - -created_at
     TagTypeDTO:
       properties:
         id:
