--- a/analysis.yaml
+++ b/analysis.yaml
@@ -7,156 +7,208 @@ servers:
     description: Base URL for all API requests
 paths:
   /v2/traffic/get_audience:
-    get:
+    post:
       tags:
-        - Аудитория
-      summary: Получить аудиторию канала
-      description: Получение статистики по аудитории канала
-      operationId: get_audience_v2_traffic_get_audience_get
+      - Трафик V2
+      summary: Get Audience
+      operationId: get_audience_v2_traffic_get_audience_post
       security:
-        - HTTPBearer: []
+      - HTTPBearer: []
       parameters:
-        - name: channel_id
-          in: query
-          required: true
-          schema:
-            type: integer
-          description: ID канала
-        - name: start_datetime
-          in: query
-          required: true
-          schema:
-            type: string
-            format: date-time
-          description: Дата и время начала периода
-        - name: end_datetime
-          in: query
-          required: true
-          schema:
-            type: string
-            format: date-time
-          description: Дата и время окончания периода
-        - name: event_id
-          in: query
-          required: true
-          schema:
-            type: integer
-          description: Идентификатор события (1 — подписка, 2 — отписка)
-        - name: invite_links_hash
-          in: query
-          required: false
-          schema:
-            type: array
-            items:
-              type: string
-          description: Хэши пригласительных ссылок
-        - name: is_premium
-          in: query
-          required: false
-          schema:
-            type: boolean
-            nullable: true
-          description: Фильтр премиум
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-            default: 1
-          description: Номер страницы
-        - name: limit
-          in: query
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 100
-            default: 50
-          description: Количество элементов на странице
+      - name: offset
+        in: query
+        required: false
+        schema:
+          type: integer
+          description: Смещение
+          default: 0
+          title: Offset
+        description: Смещение
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+          maximum: 100
+          exclusiveMinimum: 0
+          description: Ограничение
+          default: 50
+          title: Limit
+        description: Ограничение
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/application__api__traffic__schemas__AudienceRequest'
       responses:
-        "200":
-          description: Успешный ответ
+        '200':
+          description: Successful Response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AudienceResponse"
-        "422":
-          description: Ошибка валидации
+                type: array
+                items:
+                  $ref: '#/components/schemas/Audience'
+                title: Response Get Audience V2 Traffic Get Audience Post
+        '401':
+          description: Unauthorized
+        '422':
+          description: Validation Error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   securitySchemes:
     HTTPBearer:
       type: http
       scheme: bearer
-
   schemas:
-    AudienceResponse:
-      type: object
-      required:
-        - total
-        - page
-        - limit
-        - items
+    ValidationError:
       properties:
-        total:
-          type: integer
-        page:
-          type: integer
-        limit:
-          type: integer
-        items:
-          type: array
+        loc:
           items:
-            $ref: "#/components/schemas/AudienceItem"
-
-    AudienceItem:
+            anyOf:
+            - type: string
+            - type: integer
+          type: array
+          title: Location
+        msg:
+          type: string
+          title: Message
+        type:
+          type: string
+          title: Error Type
       type: object
       required:
-        - user_id
-        - username
-        - is_premium
-        - join_date
+      - loc
+      - msg
+      - type
+      title: ValidationError
+    Audience:
       properties:
         user_id:
           type: integer
-        username:
-          type: string
-          nullable: true
-        is_premium:
-          type: boolean
-        join_date:
+          title: User Id
+        event_status_id:
+          type: integer
+          title: Event Status Id
+        created_at:
           type: string
           format: date-time
-
-    HTTPValidationError:
+          title: Created At
+        is_premium:
+          type: boolean
+          title: Is Premium
+        photo_url:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Photo Url
+        first_name:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: First Name
+        last_name:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Last Name
+        phone_number:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Phone Number
+        username:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Username
+        bio:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Bio
+        birthday:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Birthday
+        invite_link:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Invite Link
+        age:
+          anyOf:
+          - prefixItems:
+            - type: integer
+            - type: integer
+            type: array
+            maxItems: 2
+            minItems: 2
+          - type: 'null'
+          title: Age
+          readOnly: true
       type: object
       required:
-        - detail
+      - user_id
+      - event_status_id
+      - created_at
+      - is_premium
+      - photo_url
+      - first_name
+      - last_name
+      - phone_number
+      - username
+      - bio
+      - birthday
+      - invite_link
+      - age
+      title: Audience
+    HTTPValidationError:
       properties:
         detail:
-          type: array
           items:
-            $ref: "#/components/schemas/ValidationError"
-
-    ValidationError:
-      type: object
-      required:
-        - loc
-        - msg
-        - type
-      properties:
-        loc:
+            $ref: '#/components/schemas/ValidationError'
           type: array
+          title: Detail
+      type: object
+      title: HTTPValidationError
+    application__api__traffic__schemas__AudienceRequest:
+      properties:
+        start_datetime:
+          type: string
+          format: date-time
+          title: Start Datetime
+          description: Дата и время начала периода
+        end_datetime:
+          type: string
+          format: date-time
+          title: End Datetime
+          description: Дата и время окончания периода
+        channel_id:
+          type: integer
+          title: Channel Id
+          description: Идентификатор канала
+        event_id:
+          type: integer
+          title: Event Id
+          description: Идентификатор события
+        invite_links_hash:
           items:
             anyOf:
-              - type: string
-              - type: integer
-        msg:
-          type: string
-        type:
-          type: string
+            - type: string
+            - type: 'null'
+          type: array
+          title: Invite Links Hash
+          description: Хэши пригласительных ссылок
+      type: object
+      required:
+      - start_datetime
+      - end_datetime
+      - channel_id
+      - event_id
+      title: AudienceRequest
